infrastructure/kyverno/config/default-ingress-dns-ttl.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: default-ingress-dns-ttl
spec:
  failurePolicy: Fail
  rules:
    - name: add-ttl
      match:
        any:
          - resources:
              kinds:
                - Ingress
              namespaceSelector:
                matchLabels:
                  policy.fraguinha.com/defaults: enabled
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.kubernetes.io/ttl): "300"
